# Accounts-REST-API

./: .gitignore  Cargo.toml
src/: constants.rs  endpoints.rs  errors.rs  main.rs  middleware.rs  structs.rs  traits.rs  types.rs  util.rs
src/endpoints/: authentication.rs  delete.rs  get.rs  login.rs  logout.rs  register.rs  verify.rs
src/middleware/: authenticated.rs
src/structs/: cookie.rs  session.rs  status.rs  user.rs  user_agent.rs
src/traits/: persistent_storage_provider.rs  temporary_storage_provider.rs
src/util/: data.rs  hashing.rs  math.rs  parse.rs  sessions.rs
src/util/actix/: path.rs
src/util/data/: providers.rs
src/util/data/providers/: firefly.rs  in_memory.rs  scylla.rs
