[package]
name = "accounts-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
async-trait = "0.1.57"
chrono = { version = "0.4.22", features = ["serde"] }
enum-display-derive = "0.1.1"
paperclip = { version = "0.7.1", features = ["actix4", "v3"] }
serde = { version = "1.0.145", features = ["derive"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
