[package]
name = "accounts-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.3"
actix-web = "4.2.1"
async-trait = "0.1.57"
chrono = { version = "0.4.22", features = ["serde"] }
enum-display-derive = "0.1.1"
env_logger = "0.9.1"
ffly-rs = "0.0.5"
futures = "0.3.24"
paperclip = { version = "0.7.1", features = ["actix4", "v3"] }
rand = "0.8.5"
rust-argon2 = "1.0.0"
scylla = "0.6.1"
serde = { version = "1.0.145", features = ["derive"] }
tokio = "1.21.2"
twox-hash = "1.6.3"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
